--- a/src/pages/tr/index.astro
+++ b/src/pages/tr/index.astro
@@ -26,7 +26,7 @@ if (!content) {
 // Get CMS fair data for slider
 console.log('🎬 SLIDER DEBUG: Loading CMS fairs for slider...');
 const fairYearData = await getCollection('fair-years');
-const allFairs = [];
+const allFairs: any[] = [];
 
 fairYearData.forEach((yearData: any) => {
   const fairs = yearData.data?.fairs || [];
@@ -43,7 +43,7 @@ fairYearData.forEach((yearData: any) => {
           fairName: fair.basic_info?.name_tr || '',
           fairLogo: fair.visuals?.logo || "/images/fuarlar-logo.png",
           fairWebsite: fair.slider_content?.website_url || '#',
-          miniImages: fair.slider_content?.mini_images?.map(img => img.image) || [],
+          miniImages: fair.slider_content?.mini_images?.map((img: any) => img.image) || [],
           mapsEmbed: fair.slider_content?.maps_embed || ''
         }
       });
